# ai-study

./: .env.example  .gitignore  DATABASE_MODELS.md  Dockerfile  README.md  TESTING.md  dev-restart.bat  dev-start.bat  dev-stop.bat  docker-compose.yml  init.sql  playwright_questions_20250722_173519.json  system_architect_crawler.py  test-services.bat  test-services.sh  test.json  todo  开发环境使用说明.md  数据库结构梳理报告.md  知识体系导入指南.md  知识库管理完整指南.md
.trae/rules/: project_rules.md
.vercel/: project.json
app/: API_VALIDATION_INTEGRATION_GUIDE.md  README.md  analysis_options.yaml  openapi.json  pubspec.yaml
app/.githooks/: pre-commit
app/.github/workflows/: api-validation.yml
app/backend/: .coveragerc  DATABASE_MIGRATION_GUIDE.md  DOCKER_MIGRATION_SETUP.md  MODERN_PACKAGE_MANAGEMENT.md  alembic.ini  conftest.py  dev_migrate.sh  main.py  manage_db.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start.sh  test_runner.py
app/backend/alembic/: env.py  script.py.mako
app/backend/alembic/versions/: 001_initial_knowledge_system.py
app/backend/api/: admin.py  analytics.py  auth.py  knowledge.py  podcast.py  practice.py  public.py  questions.py
app/backend/core/: auth.py  config.py  database.py  logging_config.py  scheduler.py
app/backend/models/: ai_config.py  analytics.py  knowledge.py  learning_path.py  podcast.py  practice.py  question.py  user.py
app/backend/schemas/: ai_config.py
app/backend/scripts/: import_knowledge.py  migrate.py
app/backend/services/: ai_config_service.py  ai_providers.py  ai_service.py  ai_service_manager.py  analytics_service.py  knowledge_extractor.py  learning_path_service.py  rag_service.py  task_manager.py  tts_service.py
app/backend/tests/: conftest.py  test_api_admin.py  test_api_analytics.py  test_api_podcast.py  test_api_practice.py  test_api_questions.py  test_auth.py  test_integration_workflows.py  test_main.py  test_models_analytics.py  test_models_knowledge.py  test_models_learning_path.py  test_models_podcast.py  test_models_practice.py  test_models_question.py  test_models_user.py  test_services_ai.py  test_services_analytics.py  test_services_rag.py
app/backend/tests/unit/: __init__.py  test_services.py
app/docs/: API_VALIDATION_GUIDE.md
app/frontend/: .dockerignore  .gitignore  Dockerfile  components.d.ts  index.html  nginx.conf  package.json  test-runner.js  tsconfig.json  vite.config.ts  vitest.config.ts
app/frontend/src/: App.vue  main.ts
app/frontend/src/api/: admin.ts  auth.ts  index.ts
app/frontend/src/router/: index.js  index.ts
app/frontend/src/stores/: auth.ts
app/frontend/src/styles/: index.scss
app/frontend/src/views/: Admin.vue  Analytics.vue  Auth.vue  Dashboard.vue  Home.vue  KnowledgeManagement.vue  NotFound.vue  Podcast.vue  Practice.vue
app/frontend/src/views/admin/: AIConfig.vue  SystemLogs.vue  Tasks.vue
app/frontend/tests/: setup.ts
app/frontend/tests/api/: index.test.ts
app/frontend/tests/components/: Home.test.ts
app/frontend/tests/stores/: auth.test.ts
app/frontend/tests/utils/: test-utils.ts
app/scripts/: run_api_analyzer.ps1
app/tools/analyzer_plugin/: README.md  activate_plugin.dart  pubspec.yaml  test_plugin.dart  test_plugin.ps1
backend/: .pylintrc  Dockerfile  README.md  README_MIGRATION.md  alembic.ini  check_user.py  main.py  manage.py  pyproject.toml  start.sh  test_upload_data.json
backend/alembic/: env.py
backend/alembic/versions/: 0550f48d2568_increase_question_title_length_limit_to_.py  09085984cae7_auto_generated_model_changes.py  0ce38af7a8ad_auto_generated_model_changes.py  19626bf1e7ac_initial_migration.py  200250775080_change_question_title_from_string_to_.py  891fa4825dfd_auto_generated_model_changes.py  b39859c85155_add_missing_foreign_keys_and_.py  c7f2441facd7_auto_generated_model_changes.py  fa6cc473aec6_auto_generated_model_changes.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai.py  auth.py  question_banks.py  questions.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: __init__.py  ai.py  auth.py  question.py  question_bank.py  user.py
backend/app/services/: __init__.py  ai_service.py  migration_service.py  question_bank_service.py
backend/scripts/: dev-entrypoint.sh  docker-entrypoint.sh  migration-utils.sh  test.sh
backend_front/: Dockerfile  eslint-plugin-no-direct-axios.js  eslint-plugin-openapi-validator.js  eslint.config.ts  index.html  openapi.json  package-lock.json  package.json  temp_openapi.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
backend_front/scripts/: sync-openapi.ps1  sync-openapi.sh
backend_front/src/: App.vue  main.ts  style.css
backend_front/src/components/: QuestionBankDetail.vue  QuestionBankFilter.vue  QuestionBankStats.vue  QuestionBankTable.vue  QuestionBankUpload.vue
backend_front/src/router/: index.ts
backend_front/src/services/: api.ts  http.ts
backend_front/src/stores/: auth.ts
backend_front/src/tests/: auth.test.ts  http.test.ts  router.test.ts  setup.ts
backend_front/src/views/: AIChat.vue  ComprehensiveQuestionBanks.vue  Dashboard.vue  Home.vue  Login.vue  QuestionBanks.vue  Questions.vue  Register.vue  SubjectDetail.vue  SubjectQuestionBanks.vue  Subjects.vue
tests/: test_knowledge_extractor.py  test_learning_path_service.py
